k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: myastro360
  labels:
    app.kubernetes.io/part-of: myastro360
