k8s/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: jyotryx
  labels:
    app: api
    app.kubernetes.io/part-of: jyotryx
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
      name: http
