k8s/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: jyotryx
  labels:
    app: web
    app.kubernetes.io/part-of: jyotryx
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
